--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
           </div>
         </div>
       </header>
+      <a href="https://elated-beaver-0a1701.netlify.app/">Open-source code</a>
+      by Margherita Mugione
     </div>
     <script src="index.js"></script>
   </body>
