Fixed the styling

--- a/index.html
+++ b/index.html
@@ -94,8 +94,10 @@
           </div>
         </div>
       </header>
-      <a href="https://elated-beaver-0a1701.netlify.app/">Open-source code</a>
-      by Margherita Mugione
+      <a href="https://elated-beaver-0a1701.netlify.app/" class="link"
+        >Open-source code</a
+      >
+      <span class="myself">by Margherita Mugione</span>
     </div>
     <script src="index.js"></script>
   </body>
