Changed the url

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
         </div>
       </header>
-      <a href="https://elated-beaver-0a1701.netlify.app/" class="link"
+      <a href="https://github.com/Margherita25/weather-app" class="link"
         >Open-source code</a
       >
       <span class="myself">by Margherita Mugione</span>
